# FVMB

./: README.md
exercise_0/: CMakeLists.txt  FVMBV_exercise0_visualise.ipynb  ct_image_jit.pth  ct_image_pytorch.pth  exercise0_old.py  exercise_0.py  gauss_smoothing_sparse.cpp  output.pth
exercise_1/: FVMBV_1-libtorch.ipynb  exercise1_BONUS.py
exercise_1/cpp/: CMakeLists.txt  graph_s_data_jit.pth  main.cpp
exercise_1/python/: Ex01_A2.ipynb  FVMBV_1-pytorch.ipynb  exercise1_BONUS.py  exercise_1_1.py  exercise_1_2.py  graph_s_data_pytorch.pth  img_denoise_bonus.pth  img_filtered_output.pth  utils.py
exercise_2/cpp/: CMakeLists.txt  adam_flow.pth  fvmbv_exercise2_task12.cpp  fvmbv_exercise2_task3.cpp  images_contrast_jit.pth  images_jit.pth  output_flow.pth
exercise_2/python/: fvmbv_exercise2.ipynb  images_contrast_py.pth  images_flow.pth  visualize_cpp.ipynb
exercise_3/: readme.txt
exercise_3/cpp/: CMakeLists.txt  exercise3_stereo_jit.pth  fvmbv_exercise3.cpp  readme.txt  stereo_output.pth
exercise_3/python/: Ex3+Bonus.ipynb  Ex3.ipynb  Ex3_Falco.ipynb  Ex3_Jesse.ipynb  Ex3_Visualize.ipynb  Exercise3_Template.ipynb  exercise3_stereo_pytorch.pth  fvmbv_exercise3.ipynb
exercise_4/cpp/: CMakeLists.txt  fvmbv_exercise4.cpp  fvmbv_sparse_keypoints_jit.pth
exercise_4/python/: Ex_4.ipynb  fvmbv_sparse_keypoints.pth
exercise_5/: FVMBV_Exercise5-Bonus.ipynb  FVMBV_Exercise5.ipynb  utils_rw_scribble.py
exercise_6/: readme.txt  uebung6_data.pth
exercise_6/cpp/: CMakeLists.txt  Net.cpp  fvmbv_exercise6.cpp  fvmbv_exercise6_jit.pth  predicted_coordinates.pth  visu_cpp_result.ipynb
exercise_6/python/: fvmbv_exercise6_heatmap_cnns.ipynb  net.pt
